--- a/css/style.css
+++ b/css/style.css
@@ -518,11 +518,11 @@ label {
 .menu-area::before {
 	content: "";
 	background: #fff;
-	width: 32%;
+	width: 100vw;
 	height: 115px;
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
-	left: -34px;
+	/* left: -34px; */
 }
 
 .menu-area2::before {
